# gamejam2025

./: README.md
Ari Prototyping/: .firstsetup.cpp.un~  .main.cpp.un~  .secondprototype.cpp.un~  firstsetup.cpp  firstsetup.cpp~  keystrokes.cpp  main.cpp  secondprototype.cpp  secondprototype.cpp~
Ari Prototyping/actuallydoinggraphicalshit/: .definitions.h.swp  .graphical.h.un~  definitions.h  fragment.fs  graphical.h  graphical.h~  main.cpp  vertex.vs
Ari Prototyping/firstprototype/: .firstsetup.cpp.un~  firstsetup.cpp
Ari Prototyping/graphical/: CMakeLists.txt  helloWindow.cpp
Ari Prototyping/graphical/glad/: glad.h
Ari Prototyping/graphical/src/: helloWorld.cpp
Ari Prototyping/graphical_attempt_2/: glad.c  learningopengl.cpp  textures.cpp
Ari Prototyping/win32 cuz fuck this/: basewin.h  definitions.h  getsprites.cpp  graphics.cpp  main.cpp  mapfunctions.h
Ari Prototyping/win32 cuz fuck this/Maps/: 0.txt  1.txt  2.txt  3.txt  stone.txt
